[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/childScenes/pauseScreen/pause.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/optionsScreen/scenario/option-field.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/pause/texts/english/Options.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/pause/texts/english/Options(v2).png" type="Texture" id=4]
[ext_resource path="res://assets/sprites/pause/texts/english/mainMenu.png" type="Texture" id=5]
[ext_resource path="res://assets/sprites/pause/texts/english/mainMenu(v2).png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/pause/texts/english/resumeGame.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/pause/texts/english/resumeGame(v2).png" type="Texture" id=8]

[sub_resource type="Animation" id=1]

resource_name = "pause"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("box1:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.922667 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("black_background:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("white_background:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("box1/options:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("box1/mainMenu:self_modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("box1/resumeGame:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="Node2" type="Node2D"]

pause_mode = 2
position = Vector2( 511.906, 299.98 )
scale = Vector2( 15.9827, 9.38549 )
script = ExtResource( 1 )
_sections_unfolded = [ "Material", "Pause", "Transform", "Visibility", "Z Index" ]

[node name="black_background" type="ColorRect" parent="." index="0"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -32.0
margin_top = -32.0
margin_right = 32.0
margin_bottom = 32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 0.558 )
_sections_unfolded = [ "Focus", "Pause", "Visibility" ]

[node name="white_background" type="ColorRect" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -32.0
margin_top = -32.0
margin_right = -32.0
margin_bottom = -32.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 1, 1, 1, 0.259647 )
_sections_unfolded = [ "Visibility" ]

[node name="box1" type="Sprite" parent="." index="2"]

pause_mode = 2
self_modulate = Color( 1, 1, 1, 0.922667 )
position = Vector2( 0.610363, 0.435844 )
scale = Vector2( 0.014474, 0.0345279 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Material", "Pause", "Transform", "Visibility" ]

[node name="options" type="TextureButton" parent="box1" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -295.0
margin_top = -333.0
margin_right = 211.0
margin_bottom = -184.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )
expand = true
_sections_unfolded = [ "Textures", "Visibility" ]

[node name="mainMenu" type="TextureButton" parent="box1" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -379.0
margin_top = 95.0
margin_right = 366.0
margin_bottom = 228.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 5 )
texture_hover = ExtResource( 6 )
expand = true
_sections_unfolded = [ "Textures", "Visibility" ]

[node name="resumeGame" type="TextureButton" parent="box1" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -420.0
margin_top = 466.0
margin_right = 471.0
margin_bottom = 619.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 8 )
expand = true
_sections_unfolded = [ "Textures", "Visibility" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="3"]

pause_mode = 2
root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/pause = SubResource( 1 )
blend_times = [  ]
_sections_unfolded = [ "Pause" ]

[connection signal="pressed" from="box1/options" to="." method="_on_options_pressed"]

[connection signal="pressed" from="box1/mainMenu" to="." method="_on_mainMenu_pressed"]

[connection signal="pressed" from="box1/resumeGame" to="." method="_on_resumeGame_pressed"]


